Copyright (c) 2003-2007 Infrae. All rights reserved.
See also LICENSE.txt
$Revision: 1.24 $

SilvaMetadata changes

  1.0.2

    Features added

      - Add id suggestion for set naming convention to add ui

  1.0.1

    Bugs fixed

      - The Zope 2.10 event system was causing importing .zexp which
        contained the metadata service to fail. Fixed this.

  1.0

    Features added

      - Made SilvaMetadata Zope-2.10 compliant, so that it works
        with Silva 2.0.

  0.17

    Features added 

      - 2007-03-15: The default access handler and the
        MetadataBindingAdapter now have a read_only parameter, False
        by default, that if set to true will cause all write actions
        to the binding to be silently ignored.

  0.16

    Bugs fixed    

      - 2007-01-25: Added missing imports in MetadataTool.py.

  0.15

    Bugs fixed    

      - MetadataTool.getMetadataValue did not work correctly for
        Ghosts and GhostFolders, it does now.

  0.14

    Features added

      - Added 'Export Metadata Set as XML' button to set overview screen

      - Changed the button value in Content Type Mappings from 'edit 
        mappings' to 'save mappings'

    Bugs fixed
      
      - Bugfix for empty strings in aqcuirable metadata fields blocking
        acquisition. Many thanks to Nico Grubert for the bug report and
        proposed fix!
      
  0.13

    Features added

      - MetadataTool.getMetadataValue can now get just this objects
        metadata, not acquiring parent metadata

  0.11

    Features added

      - If an extension to Silva provides IAcquiredUpdater adapters for
        content objects, these will used. An IAcquiredUpdater adapter for
        an IContainer could for instance reindex any sub-objects.

      - Use Zope 3 style interfaces. This means that Zope 2.8 is now
        required.

    Bugs fixed

      - Stop using deprecated CMFCore.CMFCorePermissions module

      - Even more fixes to the unit tests (issue 1381).
